--- a/root.html
+++ b/root.html
@@ -20,27 +20,43 @@
     ></script>
   </head>
   <body class="dark">
-    <header class="fixed-top bg-dark shadow-sm">
-      <nav>
-         <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#gioi-thieu">Giới thiệu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#cong-cu">Công cụ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#du-an">Dự án</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#chung-chi">Chứng chỉ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#lien-he">Liên hệ</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="fixed-top bg-dark shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-dark container">
+<img src="img/image copy 5.png" alt="Logo" class="img-fluid me-3" style="height: 50px; border-radius: 10px;">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#gioi-thieu">Giới thiệu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#cong-cu">Công cụ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#du-an">Dự án</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#chung-chi">Chứng chỉ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#lien-he">Liên hệ</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
 
     <main style="margin-top: 100px">
       <section class="intro" id="gioi-thieu">
