Fix context through layout

--- a/index.html
+++ b/index.html
@@ -20,43 +20,42 @@
     ></script>
   </head>
   <body class="dark">
-  <header class="fixed-top bg-dark shadow-sm">
-  <nav class="navbar navbar-expand-lg navbar-dark container">
-<img src="img/image copy 5.png" alt="Logo" class="img-fluid me-3" style="height: 50px; border-radius: 10px;">
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#gioi-thieu">Giới thiệu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#cong-cu">Công cụ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#du-an">Dự án</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#chung-chi">Chứng chỉ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#lien-he">Liên hệ</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+    <header class="fixed-top bg-dark shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-dark container">
+        <img src="img/image copy 5.png" alt="Logo" class="img-fluid me-3" style="height: 50px; border-radius: 10px" />
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#gioi-thieu">Giới thiệu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#cong-cu">Công cụ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#du-an">Dự án</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#chung-chi">Chứng chỉ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#lien-he">Liên hệ</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
     <main style="margin-top: 100px">
       <section class="intro" id="gioi-thieu">
@@ -157,7 +156,7 @@
                     trình backend. Dự án được phát triển bằng <strong>Java</strong> và
                     <strong>Spring Framework</strong>, tập trung vào hiệu năng, bảo mật và cấu trúc dễ mở rộng.
                   </p>
-                  <p>
+                  <p style="word-break: break-word; overflow-wrap: break-word;">
                     🔗 <strong>GitHub Backend:</strong>
                     <a href="https://github.com/PhanPhucDai/WebBanSach_Backend" target="_blank">
                       github.com/PhanPhucDai/WebBanSach_Backend </a
@@ -190,7 +189,7 @@
                     năng lập trình, đồng thời cũng là bài làm bảo vệ cuối môn của mình. Tuy còn nhiều điểm cần cải
                     thiện, nhưng mình đang tiếp tục hoàn thiện để mang lại trải nghiệm tốt hơn.
                   </p>
-                  <p>
+                  <p style="word-break: break-word; overflow-wrap: break-word;">
                     🔗 <strong>GitHub Backend:</strong>
                     <a href="https://github.com/PhanPhucDai/Web_Watch" target="_blank">
                       github.com/PhanPhucDai/Web_Watch
@@ -222,7 +221,7 @@
                 🔧 Dự án này cũng là một phần giúp cải thiện nâng cao kĩ năng và kĩ thuật, phản ánh nỗ lực cá nhân trong
                 việc kết hợp kỹ thuật lập trình hiện đại với ý tưởng thực tế.
               </p>
-              <p>
+              <p style="word-break: break-word; overflow-wrap: break-word;">
                 🔗 <strong>GitHub Backend:</strong>
                 <a href="https://github.com/PhanPhucDai/ONLY_Cook" target="_blank">
                   github.com/PhanPhucDai/ONLY_Cook
