Add: Install My_CV

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         </div>
         <h2>Phan Phúc Đại</h2>
         <p class="job-title">Lập trình viên Backend</p>
+    <div class="mt-4">
+  <a href="./img/Java_Thực_Tập_ Sinh_PhanPhucDai.pdf" download class="custom-download-btn">
+    📄 Tải CV của tôi
+  </a>
+</div>
+
+
         <div class="p-4 rounded">
           <p>
             Là một <strong>Backend Developer thế hệ mới</strong>, tôi tin rằng công nghệ không chỉ là công cụ, mà còn là
@@ -156,7 +163,7 @@
                     trình backend. Dự án được phát triển bằng <strong>Java</strong> và
                     <strong>Spring Framework</strong>, tập trung vào hiệu năng, bảo mật và cấu trúc dễ mở rộng.
                   </p>
-                  <p style="word-break: break-word; overflow-wrap: break-word;">
+                  <p style="word-break: break-word; overflow-wrap: break-word">
                     🔗 <strong>GitHub Backend:</strong>
                     <a href="https://github.com/PhanPhucDai/WebBanSach_Backend" target="_blank">
                       github.com/PhanPhucDai/WebBanSach_Backend </a
@@ -189,7 +196,7 @@
                     năng lập trình, đồng thời cũng là bài làm bảo vệ cuối môn của mình. Tuy còn nhiều điểm cần cải
                     thiện, nhưng mình đang tiếp tục hoàn thiện để mang lại trải nghiệm tốt hơn.
                   </p>
-                  <p style="word-break: break-word; overflow-wrap: break-word;">
+                  <p style="word-break: break-word; overflow-wrap: break-word">
                     🔗 <strong>GitHub Backend:</strong>
                     <a href="https://github.com/PhanPhucDai/Web_Watch" target="_blank">
                       github.com/PhanPhucDai/Web_Watch
@@ -221,7 +228,7 @@
                 🔧 Dự án này cũng là một phần giúp cải thiện nâng cao kĩ năng và kĩ thuật, phản ánh nỗ lực cá nhân trong
                 việc kết hợp kỹ thuật lập trình hiện đại với ý tưởng thực tế.
               </p>
-              <p style="word-break: break-word; overflow-wrap: break-word;">
+              <p style="word-break: break-word; overflow-wrap: break-word">
                 🔗 <strong>GitHub Backend:</strong>
                 <a href="https://github.com/PhanPhucDai/ONLY_Cook" target="_blank">
                   github.com/PhanPhucDai/ONLY_Cook
