Fix: Rename File CV

--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
         </div>
         <h2>Phan Phúc Đại</h2>
         <p class="job-title">Lập trình viên Backend</p>
-    <div class="mt-4">
-  <a href="./img/Java_Thực_Tập_ Sinh_PhanPhucDai.pdf" download class="custom-download-btn">
-    📄 Tải CV của tôi
-  </a>
-</div>
-
+        <div class="mt-4">
+          <a href="./img/Java_Thuc_Tap_Sinh_PhanPhucDai.pdf" download class="custom-download-btn">
+            📄 Tải CV của tôi
+          </a>
+        </div>
 
         <div class="p-4 rounded">
           <p>
