Add: mục giải thuật

--- a/index.html
+++ b/index.html
@@ -236,6 +236,37 @@
               <p class="fst-italic">Cảm ơn bạn đã dành thời gian xem qua dự án của mình 🙌</p>
             </div>
           </div>
+
+          <!--300 bài code thiếu nhi-->
+          <div class="project-box">
+            <div class="d-flex flex-column justify-content-center">
+              <h2 class="text-center fw-bold mb-3">🧠 Rèn luyện tư duy – 300 bài code thiếu nhi</h2>
+              <p class="text-justify">
+                <strong>300 bài code thiếu nhi</strong> là dự án cá nhân mình thực hiện với mục tiêu nâng cao tư duy lập
+                trình nền tảng thông qua việc giải các bài toán từ đơn giản đến nâng cao. Dự án giúp mình luyện tập
+                logic, cải thiện kỹ năng phân tích và phát triển thói quen code đều đặn mỗi ngày.
+              </p>
+              <p class="text-justify">
+                Mỗi bài tập đều được mình tự tay code, chú thích rõ ràng để dễ theo dõi, và commit đầy đủ lên GitHub để
+                tiện theo dõi tiến độ cũng như chia sẻ với mọi người cùng học. Trong quá trình luyện tập, mình cũng áp
+                dụng các kỹ thuật clean code, tối ưu hoá thuật toán và viết test case cho một số bài để nâng cao chất
+                lượng code.
+              </p>
+              <p class="text-justify">
+                🚀 Đây là hành trình rèn luyện tư duy lập trình nghiêm túc và cũng là bước đệm vững chắc trước khi bước
+                vào các dự án lớn hơn, phức tạp hơn.
+              </p>
+              <p style="word-break: break-word; overflow-wrap: break-word">
+                🔗 <strong>GitHub Repo:</strong>
+                <a href="https://github.com/PhanPhucDai/Algorithym_Data_Tructruce" target="_blank">
+                  github.com/PhanPhucDai/300-bai-code-thieu-nhi
+                </a>
+              </p>
+              <p class="fst-italic">
+                Mỗi dòng code là một bước tiến nhỏ. Cảm ơn bạn đã ghé xem và ủng hộ hành trình học tập của mình 🙌
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <section id="chung-chi" class="projects my-5">
